Port of https://github.com/Rover-Yu/lkl-linux SMP changes to LKL 4.17.

--- a/arch/lkl/Kconfig
+++ b/arch/lkl/Kconfig
@@ -1,9 +1,8 @@
 config LKL
        def_bool y
-       depends on !SMP && !MMU && !COREDUMP && !SECCOMP && !UPROBES && !COMPAT && !USER_RETURN_NOTIFIER
+       depends on !MMU && !COREDUMP && !SECCOMP && !UPROBES && !COMPAT && !USER_RETURN_NOTIFIER
        select ARCH_THREAD_STACK_ALLOCATOR
        select RWSEM_GENERIC_SPINLOCK
-       select GENERIC_ATOMIC64
        select GENERIC_HWEIGHT
        select FLATMEM
        select FLAT_NODE_MEM_MAP
@@ -16,7 +15,7 @@ config LKL
        select DMA_DIRECT_OPS
        select PHYS_ADDR_T_64BIT if 64BIT
        select 64BIT if OUTPUT_FORMAT = "elf64-x86-64"
-	   select 64BIT if OUTPUT_FORMAT = "pe-x86-64"
+       select 64BIT if OUTPUT_FORMAT = "pe-x86-64"
        select HAVE_UNDERSCORE_SYMBOL_PREFIX if OUTPUT_FORMAT = "pe-i386"
        select 64BIT if OUTPUT_FORMAT = "elf64-x86-64-freebsd"
        select 64BIT if OUTPUT_FORMAT = "elf64-littleaarch64"
@@ -40,6 +39,10 @@ config LKL
        select IP_ADVANCED_ROUTER
        select IPV6_ADVANCED_ROUTER
        select ARCH_NO_COHERENT_DMA_MMAP
+       select ARCH_USE_QUEUED_RWLOCKS
+       select ARCH_USE_QUEUED_SPINLOCKS
+       select GENERIC_BUG if BUG
+       select GENERIC_CLOCKEVENTS_BROADCAST
 
 config OUTPUTFORMAT
        string
@@ -68,6 +71,30 @@ config NO_IOPORT_MAP
        def_bool y
 
 config RWSEM_GENERIC_SPINLOCK
+	bool
+	default y
+
+config SMP
+       def_bool y
+       select GENERIC_SMP_IDLE_THREAD
+
+config KALLSYMS_ALL
+       # incompatible so far, we need more linker script magics in future
+       def_bool n
+
+config NR_CPUS
+	int "Maximum number of CPUs" if SMP
+	default "2" if SMP
+
+config LKL_X86_64
+	bool
+	default y if 64BIT
+
+config LKL_ARM_64
+	bool
+	default n if 64BIT
+
+config BUG
 	bool
 	default y
 
