--- a/arch/lkl/include/asm/Kbuild
+++ b/arch/lkl/include/asm/Kbuild
@@ -1,13 +1,8 @@
-generic-y += atomic.h
-generic-y += barrier.h
-generic-y += bitops.h
 generic-y += bug.h
 generic-y += bugs.h
 generic-y += cache.h
 generic-y += cacheflush.h
 generic-y += checksum.h
-generic-y += cmpxchg-local.h
-generic-y += cmpxchg.h
 generic-y += cputime.h
 generic-y += current.h
 generic-y += delay.h
@@ -69,10 +64,11 @@ generic-y += termios.h
 generic-y += time.h
 generic-y += timex.h
 generic-y += tlb.h
-generic-y += tlbflush.h
 generic-y += topology.h
 generic-y += trace_clock.h
 generic-y += unaligned.h
 generic-y += user.h
 generic-y += word-at-a-time.h
 generic-y += kprobes.h
+generic-y += qspinlock.h
+generic-y += qrwlock.h
