Prepare LKL for AES-GCM support.
1. Disable SSE for the rest of the kernel (as is done on x86) as otherwise
unaligned addresses being used with SSE instruction are causing segfaults.
2. Make 'module_alloc' align allocations to page size.
3. Export 'scatterwalk_map' so that x86 kernel modules can call into the LKL
implementation instead of using its own inlined version which will return
incorrect addresses.

--- a/arch/lkl/Makefile
+++ b/arch/lkl/Makefile
@@ -16,6 +16,28 @@ else
 $(error Unrecognized platform: $(OUTPUT_FORMAT))
 endif
 
+# From arch/x86/Makefile
+#
+# Prevent GCC from generating any FP code by mistake.
+#
+# This must happen before we try the -mpreferred-stack-boundary, see:
+#
+#    https://gcc.gnu.org/bugzilla/show_bug.cgi?id=53383
+#
+KBUILD_CFLAGS += -mno-sse -mno-mmx -mno-sse2 -mno-3dnow
+KBUILD_CFLAGS += $(call cc-option,-mno-avx,)
+
+# For gcc stack alignment is specified with -mpreferred-stack-boundary,
+# clang has the option -mstack-alignment for that purpose.
+ifneq ($(call cc-option, -mpreferred-stack-boundary=4),)
+      cc_stack_align4 := -mpreferred-stack-boundary=2
+      cc_stack_align8 := -mpreferred-stack-boundary=3
+else ifneq ($(call cc-option, -mstack-alignment=16),)
+      cc_stack_align4 := -mstack-alignment=4
+      cc_stack_align8 := -mstack-alignment=8
+endif
+KBUILD_CFLAGS += $(call cc-option,$(cc_stack_align8))
+
 ifeq ($(shell uname -s), Linux)
 NPROC=$(shell nproc)
 else # e.g., FreeBSD
